@@ -104,3 +104,7 @@ view "second" {
 	dnssec-validation auto;
 	zone-statistics full;
 };
+key "mykey" {
+	algorithm "hmac-md5";
+	secret "qwertyuiopasdfgh";
+};
